# food-review-recommender

./: .gitignore  LICENSE  README.md  pyproject.toml
.dvc/: .gitignore
data/: processed.dvc  raw.dvc
notebooks/: 1-EDA.ipynb
