[tool.poetry]
name = "food-review-recommender"
version = "0.1.0"
description = ""
authors = ["Toshihiro Yamaguchi <toshihiro.engineer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kaggle = "^1.5.16"
jupyterlab = "^4.0.6"
pyspark = "^3.4.1"
mlflow = "^2.7.1"
deltalake = "^0.10.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
nltk = "^3.8.1"
spacy = "^3.6.1"
scipy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
